<resources>
    <string name="app_name">Schedule</string>
    <string name="witam">witam</string>
    <string name="poland">Poland</string>
    <string name="zmie_j_zyk">Zmień język</string>
    <string name="edytuj_profil">Edytuj profil</string>
    <string name="wybierz_opcje">Wybierz opcje</string>
    <string name="strona_g_wna">Strona główna</string>
    <string name="usun_rekordy">usun rekordy</string>
    <string name="akceptuj">akceptuj</string>
    <string name="wpisz_pierwszy_tekst">wpisz pierwszy tekst</string>
    <string name="wpisz_drugi_tekst">wpisz drugi tekst</string>
    <string name="wynik">wynik</string>
    <string name="brak_zajec_w_podanym_zakresie">Brak zajec w podanym zakresie</string>
    <string name="nast_pny">NASTĘPNY</string>
    <string name="poprzedni">POPRZEDNI</string>
    <string name="zobacz_wszystkie_zajecia">ZOBACZ WSZYSTKIE ZAJECIA</string>
    <string name="dzisiejsze_zaj_cia">DZISIEJSZE ZAJĘCIA</string>
    <string name="zastosuj">Zastosuj</string>
    <string name="anuluj">Anuluj</string>
    <string name="login">Login</string>
    <string name="imie">Imie</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="og_lne_informacje">Twoje Informacje</string>
    <string name="telefon">Telefon</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="has_o">Hasło</string>
    <string name="spinner">spinner</string>
    <string name="dodatkowe_informacje">Dodatkowe informacje</string>
    <string name="usu">USUŃ</string>
    <string name="_10_00_10_30">10:00 - 10:30</string>
    <string name="_30">30</string>
    <string name="przedszkole_samorz_dowe_nr_1_n_im_jana_nowaka">Przedszkole samorządowe nr 1 Im. Jana Nowaka</string>
    <string name="obecno">Obecność</string>
    <string name="lista_realizacji_zaj">Lista realizacji zajęć</string>
    <string name="brak_element_w_do_wy_wietlenia">Brak elementów do wyświetlenia</string>
    <string name="wyloguj_si">Wyloguj się</string>
    <string name="oceny">Oceny</string>
    <string name="zaj_cia">Zajęcia</string>
    <string name="wi_cej">Więcej</string>
    <string name="wybierz_j_zyk">Wybierz język</string>
    <string name="_17_09_2023_23_09_2023">17.09.2023 - 23.09.2023</string>
    <string name="brak_danych_do_wy_wietlenia">Brak danych do wyświetlenia!</string>
    <string name="pon">PON</string>
    <string name="_12">12</string>
    <string name="_10_00">10:00</string>
    <string name="a">-</string>
    <string name="_10_30">10:30</string>
    <string name="akademia_zamosjska_wydzia_logistyki">Akademia zamosjska | Wydział Logistyki</string>
    <string name="todo">TODO</string>
    <string name="uzupenij_wszytskie_pola">Uzupełnij wszytskie pola!</string>
    <string name="podaj_takie_same_hasła">Podaj takie same hasła!</string>
    <string name="uwaga">UWAGA</string>
    <string name="czy_jestes_pewny">Czy jesteś pewny?</string>
    <string name="tak">TAK</string>
    <string name="nie">NIE</string>
    <string name="dodaj_zaj_cia">Dodaj zajęcia</string>
    <string name="wpisz_nazwe_szko_y">Wpisz nazwe szkoły</string>
    <string name="czas_rozpocz_cia_zaj">Czas rozpoczęcia zajęć</string>
    <string name="czas_zako_czenia_zaj">Czas zakończenia zajęć</string>
    <string name="zajecia_form">Anulowano wprowadzanie zajęć!</string>
    <string-array name="spinner">
        <item>Wybierz grupę</item>
        <item>1A</item>
        <item>2A</item>
        <item>3D</item>
        <item>2F</item>
        <item>4H</item>
        <item>2V</item>
        <item>1G</item>
        <item>6D</item>
        <item>2A</item>
    </string-array>
    <string-array name="days">
        <item>PON</item>
        <item>WTO</item>
        <item>ŚRO</item>
        <item>CZW</item>
        <item>PT</item>
    </string-array>
    <string-array name="months">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
    <string-array name="database">
        <item>Login</item>
        <item>Imię</item>
        <item>Nazwisko</item>
        <item>Telefon</item>
        <item>Informacje</item>
        <item>Hasło</item>
        <item>Powtórzone hasło</item>
    </string-array>
    <string-array name="languageChoose">
        <item>Polski</item>
        <item>Niemiecki</item>
        <item>Angielski</item>
        <item>Francuski</item>
        <item>Rosyjski</item>
        <item>Hiszpański</item>
    </string-array>


</resources>