<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".LessonSelectFragment">

    <GridLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="72sp"
        android:rowCount="2"
        android:columnCount="2">
        <ImageView
            android:layout_marginTop="15sp"
            android:layout_marginEnd="26sp"
            android:layout_marginStart="26sp"
            android:id="@+id/backArrow"
            android:layout_width="30sp"
            android:layout_height="40sp"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:id="@+id/textMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/witam"/>
    </GridLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginEnd="22sp"
            android:id="@+id/viewGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/hideRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:src="@drawable/baseline_category_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:id="@+id/emptyElements"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brak_danych_do_wy_wietlenia"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>